[package]
name = "HuangProject"
version = "0.1.0"
edition = "2021"

[dependencies]
bulletproofs = "5.0.0"
curve25519-dalek = "4.1.3"
blake3 = "1.7.0"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
merlin = "3.0.0"
chrono = "0.4.40"
digest = "0.10.7"
generic-array = "0.14.7"
rand = "0.8.5"
num-bigint = { version = "0.4.6", features = ["rand", "serde"] }
num-integer = "0.1.46"
num-traits = "0.2.19"
env_logger = "0.11.7"
log = "0.4.27"
criterion = "0.5.1"

[[bin]]
name = "HuangProject"
path = "src/main.rs"
harness = false

[[bench]]
name = "performance"
path = "benches/performance.rs"
harness = false

[profile.release]
debug = true